--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/732/732221.png">
     <link rel="stylesheet" href="/css/style.css">
+    <title>Microsoft Logo</title>
 </head>
 <body>
-        <div class="div-1"></div>
-        <div class="div-2"></div>
+    <div class="parent">
+        <div class="box"></div>
+        <div class="logo"></div>
+    </div>
 </body>
 </html>
