--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Microsoft Logo</title>
 </head>
 <body>
-    <div class="parent">
-        <div class="box"></div>
-        <div class="logo"></div>
-    </div>
+    <div class="box"><div class="logo"></div></div>
 </body>
 </html>
